# dylibscope

./: .gitignore  README.md  pyproject.toml  render.yaml
docs/: high_level_analysis_dylib_evolution.html  index.html  low_level_analysis_dylib_evolution.html
scripts/: generate_plots.py  generate_reports.py  import_datasets.py  migrate_database.py  query_metrics.py  run_api.py
src/: .gitignore
src/analysis_graph/: plot_graph.py
src/analysis_graph/config/: high_level_analysis_config.py  ios_version_config.py  low_level_analysis_config.py
src/config/: io.py  paths.py  utils.py
src/dylibscope/analysis_graph/: models.py  plot_graph.py
src/dylibscope/api/: __init__.py  app.py  auth.py  (+1 more)
src/high_level_analysis/: plot_hla_graph.py
src/low_level_analysis/: plot_lla_graph.py
src/output_analysis_graph/: high_level_analysis_dylib_evolution.html  low_level_analysis_dylib_evolution.html
src/security_analysis/: hla_trend_analysis.py  lla_trend_analysis.py  run_trend_analysis.sh
test/analysis_graph/: plot_graph_test.py
test/api/: metrics_api_test.py  security_report_api_test.py  user_observations_api_test.py
test/config/: io_test.py  versioning_test.py
test/high_level_analysis/: extract_high_level_test.py
test/security_analysis/: derived_scoring_test.py  hla_trend_analysis_test.py  lla_trend_analysis_test.py
test/storage/: database_url_test.py  dataset_visibility_test.py  engine_pool_test.py  ios_version_parser_test.py  storage_import_test.py
ui/: README.md  index.html  package-lock.json  package.json
ui/src/: App.jsx  api.js  auth.js  styles.css
(+37 files in other folders)
