[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dylibscope"
version = "0.1.0"
description = "Static security trend analysis of iOS dynamic libraries"
requires-python = ">=3.9"
dependencies = [
    "pandas",
    "plotly",
    "lief",
]

[tool.setuptools.packages.find]
where = ["src"]