[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dylibscope"
version = "0.1.0"
description = "Static security trend analysis of iOS dynamic libraries"
requires-python = ">=3.9"
dependencies = [
    "pandas",
    "plotly",
    "lief",
    "sqlalchemy>=2.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "pytest-cov",
    "fastapi",
    "httpx",
]
api = [
    "fastapi",
    "uvicorn[standard]",
    "psycopg[binary]>=3.1",
    "PyJWT>=2.8",
]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "UP",
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
